youfull/objects/Sales_Org_Leadership__c.object
<CustomObject>
    <fields>
        <fullName>PC_LDRSHP_RNSTMT_CNT__c</fullName>
        <label>PC_LDRSHP_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_RTURN_AMT__c</fullName>
        <label>PC_LDRSHP_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_RTURN_CNT__c</fullName>
        <label>PC_LDRSHP_RTURN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_SLS_AIDS_CNT__c</fullName>
        <label>PC_LDRSHP_SLS_AIDS_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_TITL_DMTD_CNT__c</fullName>
        <label>PC_LDRSHP_TITL_DMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_TITL_PROMTD_CNT__c</fullName>
        <label>PC_LDRSHP_TITL_PROMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_UND_MIN_CNT__c</fullName>
        <label>PC_LDRSHP_UND_MIN_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_UPLN_CNT__c</fullName>
        <label>PC_LDRSHP_UPLN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_WK1_MULT_ORD__c</fullName>
        <label>PC_LDRSHP_WK1_MULT_ORD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_WK2_MULT_ORD__c</fullName>
        <label>PC_LDRSHP_WK2_MULT_ORD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_WK3_MULT_ORD__c</fullName>
        <label>PC_LDRSHP_WK3_MULT_ORD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_WK4_MULT_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_WK4_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>PC_NON_LDRSHP_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_HOLD_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_MULT_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_NO_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_PENDNG_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_PENDNG_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_PEND_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_RTURN_CNT__c</fullName>
        <label>PC_NON_LDRSHP_RTURN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_WK1_MULT_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_WK1_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_WK2_MULT_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_WK2_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NON_LDRSHP_WK3_MULT_ORD_CNT__c</fullName>
        <label>PC_NON_LDRSHP_WK3_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_PRSNL_ORD_ABV_MIN_CNT__c</fullName>
        <label>PC_PRSNL_ORD_ABV_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_PRSNL_ORD_UND_MIN_CNT__c</fullName>
        <label>PC_PRSNL_ORD_UND_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TITL_1_AWRD_SLS_AMT__c</fullName>
        <label>PC_TITL_1_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_TITL_1_CTT_CNT__c</fullName>
        <label>PC_TITL_1_CTT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TITL_1_ERNGS_AMT__c</fullName>
        <label>PC_TITL_1_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_TITL_1_TAR_CNT__c</fullName>
        <label>PC_TITL_1_TAR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TITL_2_AWRD_SLS_AMT__c</fullName>
        <label>PC_TITL_2_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_TITL_2_CTT_CNT__c</fullName>
        <label>PC_TITL_2_CTT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TITL_2_ERNGS_AMT__c</fullName>
        <label>PC_TITL_2_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_TITL_2_TAR_CNT__c</fullName>
        <label>PC_TITL_2_TAR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TITL_3_AWRD_SLS_AMT__c</fullName>
        <label>PC_TITL_3_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_TITL_3_CTT_CNT__c</fullName>
        <label>PC_TITL_3_CTT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TITL_3_ERNGS_AMT__c</fullName>
        <label>PC_TITL_3_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_TITL_3_TAR_CNT__c</fullName>
        <label>PC_TITL_3_TAR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_UQ_TITL_1_AWRD_SLS_AMT__c</fullName>
        <label>PC_UQ_TITL_1_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_UQ_TITL_1_CTT_CNT__c</fullName>
        <label>PC_UQ_TITL_1_CTT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_UQ_TITL_1_ERNGS_AMT__c</fullName>
        <label>PC_UQ_TITL_1_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_UQ_TITL_1_TAR_CNT__c</fullName>
        <label>PC_UQ_TITL_1_TAR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ZONE_MGR_STF_CNT__c</fullName>
        <label>PC_ZONE_MGR_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_AVG_ORD_AMT__c</fullName>
        <label>PLAN_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_IN_ZONE_LDRSHP_STF_CNT__c</fullName>
        <label>PLAN_IN_ZONE_LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_ABV_MIN_CNT__c</fullName>
        <label>PLAN_LDRSHP_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_ACTVTY_PCT__c</fullName>
        <label>PLAN_LDRSHP_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_APPT_CNT__c</fullName>
        <label>PLAN_LDRSHP_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_AVG_ORD_AMT__c</fullName>
        <label>PLAN_LDRSHP_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>PLAN_LDRSHP_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_ERNGS_AMT__c</fullName>
        <label>PLAN_LDRSHP_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_FRST_ORD_CNT__c</fullName>
        <label>PLAN_LDRSHP_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_GRP_PD_SLS_AMT__c</fullName>
        <label>PLAN_LDRSHP_GRP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_HOLD_ORD_CNT__c</fullName>
        <label>PLAN_LDRSHP_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_MULT_ORD_CNT__c</fullName>
        <label>PLAN_LDRSHP_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_NET_SLS_AMT__c</fullName>
        <label>PLAN_LDRSHP_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_NO_ORD_CNT__c</fullName>
        <label>PLAN_LDRSHP_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_ORD_AVG_CUST_CNT__c</fullName>
        <label>PLAN_LDRSHP_ORD_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_PAST_DUE_AMT__c</fullName>
        <label>PLAN_LDRSHP_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_PTNTL_ERNGS_AMT__c</fullName>
        <label>PLAN_LDRSHP_PTNTL_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_RMOVL_CNT__c</fullName>
        <label>PLAN_LDRSHP_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_RNSTMT_CNT__c</fullName>
        <label>PLAN_LDRSHP_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_RTURN_AMT__c</fullName>
        <label>PLAN_LDRSHP_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_TITL_DMTD_CNT__c</fullName>
        <label>PLAN_LDRSHP_TITL_DMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_TITL_PROMTD_CNT__c</fullName>
        <label>PLAN_LDRSHP_TITL_PROMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_UND_MIN_AMT__c</fullName>
        <label>PLAN_LDRSHP_UND_MIN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_UPLN_CNT__c</fullName>
        <label>PLAN_LDRSHP_UPLN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_NON_LDRSHP_NET_SLS_AMT__c</fullName>
        <label>PLAN_NON_LDRSHP_NET_SLS_AMT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_OUT_ZONE_LDRSHP_STF_CNT__c</fullName>
        <label>PLAN_OUT_ZONE_LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_CMPGN_AVG_CUST_CNT__c</fullName>
        <label>PREV_CMPGN_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_ORD_ABV_MIN_CNT__c</fullName>
        <label>PRSNL_ORD_ABV_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_BLW_QLFR_REP_CNT__c</fullName>
        <label>PRSNL_SLS_BLW_QLFR_REP_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_SLS_REP_CNT__c</fullName>
        <label>RTURN_SLS_REP_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_CD__c</fullName>
        <label>SLS_ORG_CD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_LVL_NR__c</fullName>
        <label>SLS_ORG_LVL_NR</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_NM__c</fullName>
        <label>SLS_ORG_NM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_ACTVTY_PCT__c</fullName>
        <label>SPPY_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_GRP_PD_SLS_AMT__c</fullName>
        <label>SPPY_GRP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_IN_ZONE_LDRSHP_STF_CNT__c</fullName>
        <label>SPPY_IN_ZONE_LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_ABV_MIN_CNT__c</fullName>
        <label>SPPY_LDRSHP_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_APPT_CNT__c</fullName>
        <label>SPPY_LDRSHP_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_AVG_ORD_AMT__c</fullName>
        <label>SPPY_LDRSHP_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>SPPY_LDRSHP_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_ERNGS_AMT__c</fullName>
        <label>SPPY_LDRSHP_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_FRST_ORD_CNT__c</fullName>
        <label>SPPY_LDRSHP_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_HOLD_ORD_CNT__c</fullName>
        <label>SPPY_LDRSHP_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_MULT_ORD_CNT__c</fullName>
        <label>SPPY_LDRSHP_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_NET_SLS_AMT__c</fullName>
        <label>SPPY_LDRSHP_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_NO_ORD_CNT__c</fullName>
        <label>SPPY_LDRSHP_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_ORD_AVG_CUST_CNT__c</fullName>
        <label>SPPY_LDRSHP_ORD_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_PAST_DUE_AMT__c</fullName>
        <label>SPPY_LDRSHP_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_PTNTL_ERNGS_AMT__c</fullName>
        <label>SPPY_LDRSHP_PTNTL_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_RMOVL_CNT__c</fullName>
        <label>SPPY_LDRSHP_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_RNSTMT_CNT__c</fullName>
        <label>SPPY_LDRSHP_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_RTURN_AMT__c</fullName>
        <label>SPPY_LDRSHP_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_TITL_DMTD_CNT__c</fullName>
        <label>SPPY_LDRSHP_TITL_DMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_TITL_PROMTD_CNT__c</fullName>
        <label>SPPY_LDRSHP_TITL_PROMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_UND_MIN_CNT__c</fullName>
        <label>SPPY_LDRSHP_UND_MIN_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_UPLN_CNT__c</fullName>
        <label>SPPY_LDRSHP_UPLN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_OUT_ZONE_LDRSHP_STF_CNT__c</fullName>
        <label>SPPY_OUT_ZONE_LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Ldrship_MktTags__c</fullName>
        <label>Sales Org Ldrship MktTags</label>
        <referenceTo>Sales_Org_Ldrship_MktTags__c</referenceTo>
        <relationshipName>Sales_Org_Leaderships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TITL_1_ABV_MIN_CNT__c</fullName>
        <label>TITL_1_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_ACTVTY_PCT__c</fullName>
        <label>TITL_1_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_ANNIV_CNT__c</fullName>
        <label>TITL_1_ANNIV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_APPT_CNT__c</fullName>
        <label>TITL_1_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_AVG_ORD_AMT__c</fullName>
        <label>TITL_1_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_AWRD_SLS_AMT__c</fullName>
        <label>TITL_1_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_BAD_DEBT_AMT__c</fullName>
        <label>TITL_1_BAD_DEBT_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_BAL_DUE_AMT__c</fullName>
        <label>TITL_1_BAL_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_BRTHDY_CNT__c</fullName>
        <label>TITL_1_BRTHDY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_FRST_ORD_CNT__c</fullName>
        <label>TITL_1_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_GRP_ABV_QLFR_CNT__c</fullName>
        <label>TITL_1_GRP_ABV_QLFR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_GRP_PD_SLS_AMT__c</fullName>
        <label>TITL_1_GRP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_HOLD_ORD_CNT__c</fullName>
        <label>TITL_1_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_MULT_ORD_CNT__c</fullName>
        <label>TITL_1_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_NET_SLS_AMT__c</fullName>
        <label>TITL_1_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_NO_ORD_CNT__c</fullName>
        <label>TITL_1_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_ORD_AVG_CUST_CNT__c</fullName>
        <label>TITL_1_ORD_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_ORD_CNT__c</fullName>
        <label>TITL_1_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_PAST_DUE_AMT__c</fullName>
        <label>TITL_1_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_PATD_CNT__c</fullName>
        <label>TITL_1_PATD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_PEND_ORD_CNT__c</fullName>
        <label>TITL_1_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_PRSNL_ORD_UND_MIN_CNT__c</fullName>
        <label>TITL_1_PRSNL_ORD_UND_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_PTNTL_ERNGS_AMT__c</fullName>
        <label>TITL_1_PTNTL_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_RMOVL_CNT__c</fullName>
        <label>TITL_1_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_RNSTMT_CNT__c</fullName>
        <label>TITL_1_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_RTURN_AMT__c</fullName>
        <label>TITL_1_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_CHNG_PCT__c</fullName>
        <label>TITL_1_STF_CHNG_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_CNT__c</fullName>
        <label>TITL_1_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_TITL_DMTD_CNT__c</fullName>
        <label>TITL_1_TITL_DMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_TITL_PROMTD_CNT__c</fullName>
        <label>TITL_1_TITL_PROMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_TOP_SLR_CNT__c</fullName>
        <label>TITL_1_TOP_SLR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_UND_MIN_CNT__c</fullName>
        <label>TITL_1_UND_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_UPLN_CNT__c</fullName>
        <label>TITL_1_UPLN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_WO_PATD_CNT__c</fullName>
        <label>TITL_1_WO_PATD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_WO_TOP_SLR_TITL_CNT__c</fullName>
        <label>TITL_1_WO_TOP_SLR_TITL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_ABV_MIN_CNT__c</fullName>
        <label>TITL_2_ABV_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_ACTVTY_PCT__c</fullName>
        <label>TITL_2_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_ANNIV_CNT__c</fullName>
        <label>TITL_2_ANNIV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_APPT_CNT__c</fullName>
        <label>TITL_2_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_AVG_ORD_AMT__c</fullName>
        <label>TITL_2_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_AWRD_SLS_AMT__c</fullName>
        <label>TITL_2_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_BAD_DEBT_AMT__c</fullName>
        <label>TITL_2_BAD_DEBT_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_BAL_DUE_AMT__c</fullName>
        <label>TITL_2_BAL_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_BRTHDY_CNT__c</fullName>
        <label>TITL_2_BRTHDY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_FRST_ORD_CNT__c</fullName>
        <label>TITL_2_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_GRP_ABV_QLFR_CNT__c</fullName>
        <label>TITL_2_GRP_ABV_QLFR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_GRP_PD_SLS_AMT__c</fullName>
        <label>TITL_2_GRP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_HOLD_ORD_CNT__c</fullName>
        <label>TITL_2_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_MULT_ORD_CNT__c</fullName>
        <label>TITL_2_MULT_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_NET_SLS_AMT__c</fullName>
        <label>TITL_2_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_NO_ORD_CNT__c</fullName>
        <label>TITL_2_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_ORD_AVG_CUST_CNT__c</fullName>
        <label>TITL_2_ORD_AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_ORD_CNT__c</fullName>
        <label>TITL_2_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_PAST_DUE_AMT__c</fullName>
        <label>TITL_2_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_PATD_CNT__c</fullName>
        <label>TITL_2_PATD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_PEND_ORD_CNT__c</fullName>
        <label>TITL_2_PEND_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_PRSNL_ORD_UND_MIN_CNT__c</fullName>
        <label>TITL_2_PRSNL_ORD_UND_MIN_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_PTNTL_ERNGS_AMT__c</fullName>
        <label>TITL_2_PTNTL_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_RMOVL_CNT__c</fullName>
        <label>TITL_2_RMOVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_RNSTMT_CNT__c</fullName>
        <label>TITL_2_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_RTURN_AMT__c</fullName>
        <label>TITL_2_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_STF_CHNG_PCT__c</fullName>
        <label>TITL_2_STF_CHNG_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TITL_2_STF_CNT__c</fullName>
        <label>TITL_2_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_TITL_DMTD_CNT__c</fullName>
        <label>TITL_2_TITL_DMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_TITL_PROMTD_CNT__c</fullName>
        <label>TITL_2_TITL_PROMTD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_TOP_SLR_CNT__c</fullName>
        <label>TITL_2_TOP_SLR_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_UND_MIN_CNT__c</fullName>
        <label>TITL_2_UND_MIN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>